make changes in files naming

--- a/A - HTML/01_form.html
+++ b/A - HTML/01_form.html
@@ -9,7 +9,7 @@
     <form action="post">
       <fieldset>
         <legend>Some Form Element</legend>
-        <!-- The value of label attribute "for" should be equal to the value of input attribute "id" for link both element-->
+        <!-- The value of label attribute "for" should be equal to the value of input attribute "id" for linking both element-->
         <label for="email">Enter Email ID : </label>
         <input type="email" id="email" placeholder="Enter email id" />
 
